Refactored commit cards and container to separate pagination dots from cards. Also fixed a bug that caused part of the news card text to be hidden on the main page in the news section.

--- a/src/blocks/github/__cards-list/github__cards-list.css
+++ b/src/blocks/github/__cards-list/github__cards-list.css
@@ -4,6 +4,9 @@
 
     width: 150%;
     left: -25%;
+
+    display: grid;
+    grid-template-rows: auto 60px;
 }
 
 @media screen and (max-width: 610px) {
@@ -14,5 +17,7 @@
 
         width: 100%;
         left: 0;
+
+        grid-template-rows: auto 40px;
     }
 }
