--- a/src/blocks/github/__card/github__card.css
+++ b/src/blocks/github/__card/github__card.css
@@ -7,11 +7,12 @@
 .github__card {
     max-width: 400px;
     min-width: 336px;
+    height: 100%;
 
     display: grid;
 
     grid-template-columns: 24px 64px 16px auto 24px;
-    grid-template-rows: 24px auto 16px auto auto 16px minmax(60px, 122px) 24px;
+    grid-template-rows: 24px 24px 16px 34px 30px 16px auto 24px;
 
     background-color: #fff;
     border-radius: 16px;
@@ -22,8 +23,7 @@
 
     .github__card {
         grid-template-columns: 24px 48px 16px auto 24px;
-        grid-template-rows: 24px auto 16px auto auto 16px 90px 24px;
-
+        
         min-width: 250px;
     }
 }
@@ -31,7 +31,7 @@
 @media screen and (max-width: 610px) {
 
     .github__card {
-        width: 100%;
+        max-width: 100%;
     }
 }
 
