--- a/src/blocks/github/__pagination/github__pagination.css
+++ b/src/blocks/github/__pagination/github__pagination.css
@@ -1,10 +1,12 @@
 .github__pagination {
+    grid-row: 2/3;
+
     width: 100%;
 }
 
 .github.github .github__pagination > .swiper-pagination-bullet {
     background-color: #000;
-    opacity: .6;
+    opacity: .4;
 }
 
 @media screen and (max-width: 400px) {
