Added more support browsers to Babel. Replaced error text messages from NotFound.js module to constants.js. Changed Swiper lib import method. Code cleaned for some garbage comments and unused code pieses.

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -11,6 +11,5 @@
 @import url(../blocks/author/author.css);
 @import url(../blocks/github/github.css);
 
-/* ETERNAL STYLES */
+/* EXTERNAL STYLES */
 @import url(../vendor/fonts.css);
-@import url(../../node_modules/swiper/css/swiper.css);
