--- a/src/blocks/news/__card/__card-date/news__card-date.css
+++ b/src/blocks/news/__card/__card-date/news__card-date.css
@@ -10,8 +10,7 @@
     font-size: 18px;
     line-height: 24px;
     
-    display: flex;
-    align-items: center;
+    margin: auto 0;
     
 
     color: #B6BCBF;
