Redy to relise. Updated readme and about author block.

--- a/src/blocks/author/__text/author__text.css
+++ b/src/blocks/author/__text/author__text.css
@@ -7,8 +7,8 @@
     width: 100%;
     height: auto;
     display: block;
-
-    text-overflow: ellipsis;
+    
+    text-align: justify;
 
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
