--- a/src/blocks/notfound/notfound.css
+++ b/src/blocks/notfound/notfound.css
@@ -7,19 +7,7 @@
 	flex-direction: column;
 	align-items: center;
 
-	padding: 80px 0;
-	margin: 0;
-	
-	box-sizing: border-box;
+	padding: 6vw 7vw;
 	
 	background-color: #F5F6F7;
-	
-	overflow: hidden;
-}
-
-@media screen and (max-width: 1440px) {
-	
-	.notfound {		
-		padding: 6vw 0;
-    }
 }
