New way to store news data in storage. New way to store histogram data in storage. New brakepoints to News block to better user experience. Find and fixed bug with over flow text in git cards. Update structure of Whats new section in readme.

--- a/src/blocks/news/__card/__card-text/news__card-text.css
+++ b/src/blocks/news/__card/__card-text/news__card-text.css
@@ -11,6 +11,7 @@
     background: #FFFFFF;
 
     overflow: hidden;
-    text-overflow: ellipsis;
     text-align: justify;
+    text-overflow: ellipsis;
+    word-break: break-word;
 }
