--- a/src/blocks/news/__card/news__card.css
+++ b/src/blocks/news/__card/news__card.css
@@ -7,35 +7,36 @@
 .news__card {
     display: grid;
     
-    grid-template-columns: 1.7vw 1fr 1.7vw;
-    grid-template-rows: 20vw 44px auto 1fr 54px;
-
+    grid-template-rows: 272px 44px auto 1fr 54px;
+    grid-template-columns: 24px 1fr 24px;
+    
     background: #FFF;
     border-radius: 16px;
-
+    
     color: inherit;
     text-decoration: none;
-
+    
     overflow: hidden;
-
+    
     height: 100%;
 }
 
-@media screen and (min-width: 1440px) {
-
+@media screen and (max-width: 1440px) {
+    
     .news__card {		
-        grid-template-rows: 272px 44px auto 1fr 54px;
+        grid-template-rows: 19vw 44px auto 1fr 54px;
+        grid-template-columns: 1.7vw 1fr 1.7vw;
     }
 }
 
-@media screen and (max-width: 805px) {
+@media screen and (max-width: 1100px) {
 
     .news__card {		
-        grid-template-rows: 30vw 44px auto 1fr 48px;
+        grid-template-rows: 28vw 44px auto 1fr 48px;
     }
 }
 
-@media screen and (max-width: 495px) {
+@media screen and (max-width: 600px) {
 
     .news__card {		
         grid-template-columns: 16px 1fr 16px;
