--- a/src/blocks/news/__cards-list/news__cards-list.css
+++ b/src/blocks/news/__cards-list/news__cards-list.css
@@ -5,19 +5,19 @@
     grid-column-end: 3;
 
     display: grid;
-    grid-template-columns: repeat(3, minmax(220px, 403px));
+    grid-template-columns: repeat(3, 1fr);
 
     grid-gap: 16px;
 }
 
-@media screen and (max-width: 805px) {
+@media screen and (max-width: 1100px) {
 
     .news__cards-list {
-        grid-template-columns: repeat(2, minmax(220px, 403px));
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media screen and (max-width: 495px) {
+@media screen and (max-width: 600px) {
 
     .news__cards-list {
         grid-template-columns: 1fr;
