New text render style in author, forclient and github blocks. Readme update.

--- a/src/blocks/author/__text/author__text.css
+++ b/src/blocks/author/__text/author__text.css
@@ -8,6 +8,7 @@
     height: auto;
     display: block;
     
+    word-break: break-word;
     text-align: justify;
 
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
